src/test/run-pass/main-int-synonym.rs
type i = int;
fn main() -> i { 0 }